force-app/main/default/objects/Case.object
<CustomObject>

<fields>
    <fullName>EngineeringReqNumber__c</fullName>
    <label>Engineering Req Number</label>
    <length>12</length>
    <type>Text</type>
</fields>

<fields>
    <fullName>PotentialLiability__c</fullName>
    <label>Potential Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <label>No</label>
                <valueName>No</valueName>
            </value>
            <value>
                <label>Yes</label>
                <valueName>Yes</valueName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>

<fields>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <label>GC1040</label>
                <valueName>GC1040</valueName>
            </value>
            <value>
                <label>GC1060</label>
                <valueName>GC1060</valueName>
            </value>
            <value>
                <label>GC3020</label>
                <valueName>GC3020</valueName>
            </value>
            <value>
                <label>GC3040</label>
                <valueName>GC3040</valueName>
            </value>
            <value>
                <label>GC3060</label>
                <valueName>GC3060</valueName>
            </value>
            <value>
                <label>GC5020</label>
                <valueName>GC5020</valueName>
            </value>
            <value>
                <label>GC5040</label>
                <valueName>GC5040</valueName>
            </value>
            <value>
                <label>GC5060</label>
                <valueName>GC5060</valueName>
            </value>
            <value>
                <label>GC1020</label>
                <valueName>GC1020</valueName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>

<fields>
    <fullName>SLAViolation__c</fullName>
    <label>SLA Violation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <label>No</label>
                <valueName>No</valueName>
            </value>
            <value>
                <label>Yes</label>
                <valueName>Yes</valueName>
            </value>
        </valueSetDefinition>
    </valueSet>
</fields>
</CustomObject>